@@ -1,3 +1,8 @@
+2006-09-28  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-advrename-dialog.c:
+	Added buttons for fast access to advrename template placeholders
+
 2006-09-26  Piotr Eljasiak  <epiotr@use.pl>
 
 	* configure.in:
